--- a/package.json
+++ b/package.json
@@ -2,12 +2,18 @@
   "name": "tech-challenge-produce",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "src/main/server.ts",
   "scripts": {
-    "start:dev": "npx nodemon",
-    "test": "jest --watchAll --collectCoverage",
-    "build": "rimraf ./build && tsc",
-    "start": "npm run build && node build/index.js"
+    "start:dev": "npx nodemon src/main/server.ts",
+    "test": "jest --passWithNoTests --runInBand --no-cache",
+    "up": "npm run build && docker-compose up -d",
+    "down": "docker-compose down",
+    "check": "npm-check -s -u",
+    "build": "rimraf dist && tsc -p tsconfig-build.json",
+    "build:watch": "rimraf dist && tsc -p tsconfig-build.json -w",
+    "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
+    "start": "node dist/main/server.js",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -15,9 +21,24 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^20.12.7",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-ui-express": "^4.1.6",
+    "@types/validator": "^13.11.9",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "eslint": "^8.57.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "faker": "^6.6.6",
+    "git-commit-msg-linter": "^5.0.7",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.2",
+    "mockdate": "^3.0.5",
     "nodemon": "^3.1.0",
     "rimraf": "^5.0.5",
     "supertest": "^7.0.0",
@@ -26,6 +47,14 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "aws-sdk": "^2.1609.0",
+    "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
+    "module-alias": "^2.2.3",
+    "mongodb": "^6.5.0",
+    "reflect-metadata": "^0.2.2",
+    "swagger-ui-express": "^5.0.0",
+    "tsyringe": "^4.8.0",
+    "validator": "^13.11.0"
   }
 }
