--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start:dev": "npx nodemon src/main/server.ts",
     "test": "jest --passWithNoTests --runInBand --no-cache",
-    "up": "npm run build && docker-compose up -d",
-    "down": "docker-compose down",
+    "up": "npm run build && docker compose up -d --build",
+    "down": "docker compose down",
     "check": "npm-check -s -u",
     "build": "rimraf dist && tsc -p tsconfig-build.json",
     "build:watch": "rimraf dist && tsc -p tsconfig-build.json -w",
@@ -35,7 +35,6 @@
     "eslint-plugin-standard": "^5.0.0",
     "faker": "^6.6.6",
     "git-commit-msg-linter": "^5.0.7",
-    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
     "mockdate": "^3.0.5",
@@ -44,10 +43,12 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "husky": "^9.0.11"
   },
   "dependencies": {
     "aws-sdk": "^2.1609.0",
+    "axios": "^1.6.8",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "module-alias": "^2.2.3",
