--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/main/server.ts",
   "scripts": {
     "start:dev": "npx nodemon src/main/server.ts",
-    "test": "jest --passWithNoTests --runInBand --no-cache",
+    "test": "jest --passWithNoTests --runInBand --no-cache --coverage --collectCoverageFrom='./src/**'",
     "up": "npm run build && docker compose up -d --build",
     "down": "docker compose down",
     "check": "npm-check -s -u",
