--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "tech-challenge-produce",
   "version": "1.0.0",
   "description": "",
-  "main": "src/main/server.ts",
+  "main": "src/main/server.js",
   "scripts": {
     "start:dev": "npx nodemon src/main/server.ts",
+    "start": "node dist/main/server.js",
+    "build": "rimraf dist && tsc",
+    "build:watch": "rimraf dist && tsc -p tsconfig.json -w",
     "test": "jest --passWithNoTests --runInBand --no-cache --coverage --collectCoverageFrom='./src/**'",
     "up": "npm run build && docker compose up -d --build",
     "down": "docker compose down",
     "check": "npm-check -s -u",
-    "build": "rimraf dist && tsc -p tsconfig-build.json",
-    "build:watch": "rimraf dist && tsc -p tsconfig-build.json -w",
     "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
-    "start": "node dist/main/server.js",
     "prepare": "husky install"
   },
   "keywords": [],
