--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,19 @@
 version: '3'
+
 services:
+  mongodb:
+    container_name:  tech_challenge_mongodb
+    restart: always
+    image: mongo:latest
+    ports:
+      - 27018:27017
+    expose:
+      - 27018:27017
+    volumes:
+      - mongodb_data:/data/db
+    networks:
+      - tech_challenge_network
+
   api:
     image: node:20
     container_name: tech_challenge_produce_api 
@@ -8,18 +22,24 @@ services:
     working_dir: /usr/src/app
     command: bash -c "npm i && npm run build && npm run start"
     ports:
-      - 3333:3333
-    depends_on:
-      - mongodb
+      - 3300:3333
+    expose:
+      - 3300
     environment:
       - MONGO_URI=mongodb://mongodb:27017/order_status
       - PORT=3333
       - DOMAIN=http://localhost
       - DATABASE=order_status
       - URL_MICROSERVICE_PAYMENT=
-  mongodb:
-    container_name:  tech_challenge_mongodb
-    restart: unless-stopped
-    image: mongo:latest
-    ports:
-      - 27017:27017
+    networks:
+      - tech_challenge_network
+    restart: on-failure
+    depends_on:
+      - mongodb
+
+volumes:
+  mongodb_data:
+    driver: local
+networks:
+  tech_challenge_network:
+    driver: bridge
