--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "down": "docker compose down",
     "check": "npm-check -s -u",
     "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "swagger": "tsoa spec"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +28,7 @@
     "@types/swagger-ui-express": "^4.1.6",
     "@types/validator": "^13.11.9",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-import": "^2.29.1",
@@ -35,6 +37,7 @@
     "eslint-plugin-standard": "^5.0.0",
     "faker": "^6.6.6",
     "git-commit-msg-linter": "^5.0.7",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
     "mockdate": "^3.0.5",
@@ -43,8 +46,7 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5",
-    "husky": "^9.0.11"
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "aws-sdk": "^2.1609.0",
@@ -54,7 +56,9 @@
     "module-alias": "^2.2.3",
     "mongodb": "^6.5.0",
     "reflect-metadata": "^0.2.2",
+    "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.0",
+    "tsoa": "^6.2.1",
     "tsyringe": "^4.8.0",
     "validator": "^13.11.0"
   }
