--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2019",
-    "module": "commonjs",                     /* Disable resolving symlinks to their realpath. This correlates to the same flag in node. */
+    "module": "commonjs",
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "outDir": "dist",
@@ -13,7 +13,7 @@
   "exclude": [
     "jest.config.ts",
     "node_modules",
-    "*/test/*",
+    "*/tests/*",
     "dist",
     "**/*spec.ts",
     "*/.test.ts"
