--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,16 +15,15 @@ services:
       - tech_challenge_network
 
   api:
-    image: node:20
-    container_name: tech_challenge_produce_api 
+    container_name: node_app
+    build: .
+    ports:
+      - "3333:3333"
+    expose:
+      - 3333
     volumes:
       - ./:/usr/src/app
     working_dir: /usr/src/app
-    command: bash -c "npm i && npm run build && npm run start"
-    ports:
-      - 3300:3333
-    expose:
-      - 3300
     environment:
       - MONGO_URI=mongodb://mongodb:27017/order_status
       - PORT=3333
