deploy: alterado github actions

--- a/.github/workflows/deploy-terraform-mongodb.yml
+++ b/.github/workflows/deploy-terraform-mongodb.yml
@@ -23,7 +23,7 @@ jobs:
           terraform_wrapper: false
 
       - name: Check folder
-        uses: echo "ls"
+        run: echo "ls"
 
       - name: Generate terraform.tfvars.json
         run: |
