--- a/.github/workflows/deploy-terraform-mongodb.yml
+++ b/.github/workflows/deploy-terraform-mongodb.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./app
+        working-directory: terraform
 
     steps:
       - name: Checkout Repository
@@ -21,9 +21,6 @@ jobs:
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_wrapper: false
-
-      - name: Check folder
-        run: echo "ls"
 
       - name: Generate terraform.tfvars.json
         run: |
