--- a/.github/workflows/deploy-terraform-mongodb.yml
+++ b/.github/workflows/deploy-terraform-mongodb.yml
@@ -47,7 +47,7 @@ jobs:
         id: mongodb_connection
         run: |
           output=$(terraform output db_cn_string)
-          chmod +x ../modify_mongodb_string.sh
+          chmod +x ./modify_mongodb_string.sh
           connection_string=$(./modify_mongodb_string.sh ${{ secrets.ATLAS_PROJECT_ID }} ${{ secrets.MONGODB_USERNAME }} ${{ secrets.MONGODB_PASSWORD }})
           run: echo "MONGODB_CONN_STRING=$(echo $$connection_string)" >> $GITHUB_ENV
         shell: bash
