deploy: alterado github actions

--- a/.github/workflows/deploy-terraform-mongodb.yml
+++ b/.github/workflows/deploy-terraform-mongodb.yml
@@ -1,9 +1,7 @@
 name: Terraform MongoDB Atlas - Create
 
 on:
-  push:
-    branches:
-      - feat/deploy-project
+  workflow_dispatch:
 
 jobs:
   build:
