--- a/.github/workflows/deploy-terraform-mongodb.yml
+++ b/.github/workflows/deploy-terraform-mongodb.yml
@@ -46,10 +46,13 @@ jobs:
       - name: Create MongoDB Connection String
         id: mongodb_connection
         run: |
+          echo terraform output db_cn_string
           output=$(terraform output db_cn_string)
           chmod +x ./modify_mongodb_string.sh
           connection_string=$(./modify_mongodb_string.sh ${{ secrets.ATLAS_PROJECT_ID }} ${{ secrets.MONGODB_USERNAME }} ${{ secrets.MONGODB_PASSWORD }})
-          echo $connection_string
-          echo "::set-output name=connection_string::$connection_string"
           echo "MONGODB_CONN_STRING=$connection_string" >> $GITHUB_ENV
         shell: bash
+
+      - name: Use MongoDB Connection String
+        run: |
+          echo "MongoDB Connection String: $MONGODB_CONN_STRING"
