deploy: alterado github actions

--- a/.github/workflows/deploy-terraform-mongodb.yml
+++ b/.github/workflows/deploy-terraform-mongodb.yml
@@ -45,6 +45,19 @@ jobs:
 
       - name: Terraform Output
         id: output
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo $(terraform output -raw db_cn_string)
-          echo "MONGODB_CONN_STRING=$(terraform output -raw db_cn_string)" >> $GITHUB_ENV
+          variable_name="MONGODB_CONN_STRING"
+          connection_string="$(terraform output -raw db_cn_string)
+
+          repo_owner="owner"
+          repo_name="repository"
+
+          # Atualiza a variável de repositório usando a API do GitHub
+          curl -X PATCH \
+            -H "Authorization: token $GITHUB_TOKEN" \
+            -H "Accept: application/vnd.github.v3+json" \
+            "https://api.github.com/repos/$repo_owner/$repo_name/actions/secrets/$variable_name" \
+            -d "{\"encrypted_value\": \"$(echo -n $connection_string | openssl enc -base64)\", \"key_id\": null}""
