--- a/.github/workflows/deploy-terraform-mongodb.yml
+++ b/.github/workflows/deploy-terraform-mongodb.yml
@@ -1,64 +1,15 @@
 name: Terraform MongoDB Atlas - Create
-
-on:
-  push:
-    branches:
-      - feat/deploy-project
+on: 
+    workflow_dispatch
 
 jobs:
-  build:
-    name: Build
+  comment:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: terraform
-
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_wrapper: false
-
-      - name: Generate terraform.tfvars.json
-        run: |
-          echo '{
-            "public_key": "${{ secrets.ATLAS_PUBLIC_KEY }}",
-            "private_key": "${{ secrets.ATLAS_PRIVATE_KEY }}",
-            "project_id": "${{ secrets.ATLAS_PROJECT_ID }}",
-            "mongodb_atlas_database_username": "${{ secrets.MONGODB_USERNAME }}",
-            "mongodb_atlas_database_password": "${{ secrets.MONGODB_PASSWORD }}"
-          }' > terraform.tfvars.json
-
-      - name: Terraform Init
-        run: terraform init
-
-      - name: Terraform Plan
-        id: plan
-        run: terraform plan -var-file=terraform.tfvars.json -no-color
-
-      - name: Terraform Apply
-        id: apply
-        run: terraform apply -var-file=terraform.tfvars.json -auto-approve
-
-      - name: Update Repository Variable
-        uses: actions/setup-node@v3
-        with:
-          node-version: '14'
-
-      - name: Install GitHub CLI
-        run: |
-          sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-key C99B11DEB97541F0
-          sudo apt-add-repository https://cli.github.com/packages
-          sudo apt update
-          sudo apt install gh
-
-      - name: Authenticate with GitHub CLI
-        run: |
-          gh auth login --with-token <<< "${{ secrets.GITHUB_TOKEN }}"
-
-      - name: Update Repository Secret
-        run: |
-          gh secret set MONGODB_CONN_STRING --body "$(terraform output -raw db_cn_string)" --repository owner/repository
+      - uses: actions/checkout@v3
+      - run: |
+            gh variable list
+            gh variable set MONGODB_CONN_STRING --body "Set from workflow"
+            gh variable list
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
