--- a/.github/workflows/deploy-terraform-mongodb.yml
+++ b/.github/workflows/deploy-terraform-mongodb.yml
@@ -1,6 +1,9 @@
 name: Terraform MongoDB Atlas - Create
-on: 
-    workflow_dispatch
+
+on:
+  push:
+    branches:
+      - feat/deploy-project
 
 jobs:
   comment:
