--- a/.github/workflows/deploy-terraform-mongodb.yml
+++ b/.github/workflows/deploy-terraform-mongodb.yml
@@ -6,23 +6,13 @@ on:
       - feat/deploy-project
 
 jobs:
-  update_variable:
+  use_api:
     runs-on: ubuntu-latest
-
+    permissions: {}
     steps:
-      - name: Update Repository Variable
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # O token de acesso pessoal (PAT) é fornecido automaticamente pelo GitHub Actions.
+      - env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          variable_name="MONGODB_CONN_STRING"
-          connection_string="new_connection_string_value"
-
-          repo_owner="owner"
-          repo_name="repository"
-
-          # Atualiza a variável de repositório usando a API do GitHub
-          curl -X PUT \
-            -H "Authorization: token $GITHUB_TOKEN" \
-            -H "Accept: application/vnd.github.v3+json" \
-            "https://api.github.com/repos/$repo_owner/$repo_name/actions/secrets/$variable_name" \
-            -d "{\"encrypted_value\": \"$(echo -n $connection_string | openssl enc -base64)\", \"key_id\": null}"
+          curl --request GET \
+          --url "https://api.github.com/PATH" \
+          --header "Authorization: Bearer $GH_TOKEN"
