--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 version: '3'
 
 services:
-  mongodb:
-    container_name:  tech_challenge_mongodb
-    restart: always
-    image: mongo:latest
-    ports:
-      - 27018:27017
-    expose:
-      - 27018:27017
-    volumes:
-      - mongodb_data:/data/db
-    networks:
-      - tech_challenge_network
+  #mongodb:
+  #  container_name:  tech_challenge_mongodb
+  #  restart: always
+  #  image: mongo:latest
+  #  ports:
+  #    - 27018:27017
+  #  expose:
+  #    - 27018:27017
+  #  volumes:
+  #    - mongodb_data:/data/db
+  #  networks:
+  #    - tech_challenge_network
 
   api:
     container_name: node_app
@@ -24,21 +24,15 @@ services:
     volumes:
       - ./:/usr/src/app
     working_dir: /usr/src/app
-    environment:
-      - MONGO_URI=mongodb://mongodb:27017/order_status
-      - PORT=3333
-      - DOMAIN=http://localhost
-      - DATABASE=order_status
-      - URL_MICROSERVICE_PAYMENT=
     networks:
       - tech_challenge_network
     restart: on-failure
     depends_on:
       - mongodb
 
-volumes:
-  mongodb_data:
-    driver: local
+#volumes:
+#  mongodb_data:
+#    driver: local
 networks:
   tech_challenge_network:
     driver: bridge
