--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,6 @@ jobs:
         run: npm run test
 
       - name: Coverage
-        uses: "ArtiomTr/jest-coverage-report-action@v2.0-rc.6"
+        uses: ArtiomTr/jest-coverage-report-action@v2
         with:
           coverage-file: ./coverage/coverage-final.json
