test: add test coverage report

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,4 +27,5 @@ jobs:
       - name: Coverage
         uses: ArtiomTr/jest-coverage-report-action@v2
         with:
+          github-token: ${{ secrets.SECRET_TOKEN }}
           coverage-file: ./coverage/coverage-final.json
