--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,19 @@ jobs:
         uses: fingerprintjs/action-coverage-report-md@v1
         id: coverage
         
-      - name: Add coverage comment to the PR 
-        uses: marocchino/sticky-pull-request-comment@v2
+      - name: Code Coverage Report
+        uses: irongut/CodeCoverageSummary@v1.3.0
         with:
-          message: ${{ steps.coverage.outputs.markdownReport }}
+          filename: "**/clover.xml"
+          badge: true
+          fail_below_min: true
+          format: markdown
+          hide_branch_rate: false
+          hide_complexity: true
+          indicators: true
+          output: both
+          thresholds: "80"
+
+      - name: Adding Code Coverage to Summary
+        run: |
+          cat code-coverage-results.md >> $GITHUB_STEP_SUMMARY
