test: add test coverage report

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,32 +29,14 @@ jobs:
         id: coverage
         
       - name: Jest Coverage Comment
-        id: coverageComment
         uses: MishaKav/jest-coverage-comment@main
         with:
-          hide-comment: true
-          coverage-path: ./coverage/coverage.txt
-          junitxml-path: ./coverage/clover.xml
-
-      - name: Check the output coverage
-        run: |
-          echo "Summary Report"
-          echo "Coverage Percentage - ${{ steps.coverageComment.outputs.coverage }}"
-          echo "Coverage Color - ${{ steps.coverageComment.outputs.color }}"
-          echo "Summary Html - ${{ steps.coverageComment.outputs.summaryHtml }}"
-
-          echo "JUnit Report"
-          echo "tests - ${{ steps.coverageComment.outputs.tests }}"
-          echo "skipped - ${{ steps.coverageComment.outputs.skipped }}"
-          echo "failures - ${{ steps.coverageComment.outputs.failures }}"
-          echo "errors - ${{ steps.coverageComment.outputs.errors }}"
-          echo "time - ${{ steps.coverageComment.outputs.time }}"
-
-          echo "Coverage Report"
-          echo "lines - ${{ steps.coverageComment.outputs.lines }}"
-          echo "branches - ${{ steps.coverageComment.outputs.branches }}"
-          echo "functions - ${{ steps.coverageComment.outputs.functions }}"
-          echo "statements - ${{ steps.coverageComment.outputs.statements }}"
-          echo "coverage - ${{ steps.coverageComment.outputs.coverage }}"
-          echo "color - ${{ steps.coverageComment.outputs.color }}"
-          echo "Coverage Html - ${{ steps.coverageComment.outputs.coverageHtml }}"
+          coverage-summary-path: ./coverage/coverage-summary.json
+          title: My Jest Coverage Comment
+          summary-title: My Summary Title
+          badge-title: Coverage
+          hide-comment: false
+          create-new-comment: false
+          hide-summary: false
+          coverage-title: My Coverage Title
+          coverage-path: ./coverage.txt
