--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node dist/main/server.js",
     "build": "rimraf dist && tsc",
     "build:watch": "rimraf dist && tsc -p tsconfig.json -w",
-    "test": "jest --passWithNoTests --runInBand --no-cache --coverage --collectCoverageFrom='./src/**' --coverageReporters='json-summary'",
+    "test": "jest --passWithNoTests --runInBand --no-cache --coverage --collectCoverageFrom='./src/**'",
     "up": "npm run build && docker compose up -d --build",
     "down": "docker compose down",
     "check": "npm-check -s -u",
