--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,7 @@
 name: Build and Test
 
 on:
-  push:
-    branches:
-      - feat/deploy-project
+  workflow_dispatch:
 
 jobs:
   tests:
@@ -28,7 +26,7 @@ jobs:
         id: coverageComment
         uses: MishaKav/jest-coverage-comment@main
         with:
-          coverage-path: ./cocoverage.txt
+          coverage-path: ./coverage/coverage.txt
           junitxml-path: ./coverage/junit.xml
 
       - name: Check the output coverage
