--- a/.github/workflows/release-aws.yml
+++ b/.github/workflows/release-aws.yml
@@ -1,7 +1,9 @@
 name: Build and Push Docker Image AWS
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - add-aws-deploy
 
 jobs:
   tests:
