--- a/kubernetes-aws/deployment-aws.yml
+++ b/kubernetes-aws/deployment-aws.yml
@@ -19,7 +19,17 @@ spec:
             - name: URL_MICROSERVICE_PAYMENT
               value: http://controladorpagamento:5004
             - name: MONGO_URI
-              value: mongodb+srv://admin:terraform@tc-db-produce.6vjyeov.mongodb.net/tech_challenge_db
+              value: mongodb+srv://admin:terraform@tc-db-produce.jbljvy1.mongodb.net/tech_challenge_db
+            - name: AWS_QUEUE_URL
+              value: https://sqs.us-east-1.amazonaws.com/318353297187/tc_status_queue.fifo
+            - name: AWS_QUEUE_LISTENING_URL
+              value: https://sqs.us-east-1.amazonaws.com/318353297187/pagamento-status
+            - name: DATABASE
+              value: tech_challenge_db
+            - name: COLLECTION
+              value: order_status
+            - name: PORT
+              value: '3333'
           ports:
             - containerPort: 3333
           resources:
