--- a/kubernetes-aws/deployment-aws.yml
+++ b/kubernetes-aws/deployment-aws.yml
@@ -30,6 +30,21 @@ spec:
               value: order_status
             - name: PORT
               value: '3333'
+            - name: AWS_ACCESS_KEY_ID
+              valueFrom:
+                secretKeyRef:
+                  name: aws
+                  key: aws-access-key-id
+            - name: AWS_SECRET_ACCESS_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: aws
+                  key: aws-secret-access-key
+            - name: AWS_REGION
+              valueFrom:
+                secretKeyRef:
+                  name: aws
+                  key: aws-region
           ports:
             - containerPort: 3333
           resources:
