--- a/kubernetes-aws/deployment-aws.yml
+++ b/kubernetes-aws/deployment-aws.yml
@@ -34,12 +34,12 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: aws
-                  key: aws-access-key-id
+                  key: access-key-id
             - name: AWS_SECRET_ACCESS_KEY
               valueFrom:
                 secretKeyRef:
                   name: aws
-                  key: aws-secret-access-key
+                  key: secret-access-key
             - name: AWS_REGION
               valueFrom:
                 secretKeyRef:
