--- a/.github/workflows/release-aws.yml
+++ b/.github/workflows/release-aws.yml
@@ -94,6 +94,13 @@ jobs:
         run: |
           cat ./kubernetes-aws/*.yml
 
+      - name: Create Kubernetes secret - AWS
+        run: |
+          kubectl delete secret generic aws --ignore-not-found
+          kubectl create secret generic aws \
+            --from-literal=access-key-id=${{ secrets.AWS_ACCESS_KEY_ID }} \
+            --from-literal=secret-access-key=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
       - name: Kubernetes Apply
         run: |
           kubectl apply -f ./kubernetes-aws/
