--- a/kubernetes-aws/deployment-aws.yml
+++ b/kubernetes-aws/deployment-aws.yml
@@ -21,7 +21,7 @@ spec:
             - name: MONGO_URI
               value: mongodb+srv://admin:terraform@tc-db-produce.jbljvy1.mongodb.net/tech_challenge_db
             - name: AWS_QUEUE_URL
-              value: https://sqs.us-east-1.amazonaws.com/318353297187/tc_status_queue.fifo
+              value: https://sqs.us-east-1.amazonaws.com/318353297187/tc_status_queue
             - name: AWS_QUEUE_LISTENING_URL
               value: https://sqs.us-east-1.amazonaws.com/318353297187/pagamento-status
             - name: DATABASE
