--- a/kubernetes-aws/deployment-aws.yml
+++ b/kubernetes-aws/deployment-aws.yml
@@ -19,11 +19,11 @@ spec:
             - name: URL_MICROSERVICE_PAYMENT
               value: http://controladorpagamento:5004
             - name: MONGO_URI
-              value: mongodb+srv://admin:terraform@tc-db-produce.jbljvy1.mongodb.net/tech_challenge_db
+              value: ''
             - name: AWS_QUEUE_URL
-              value: https://sqs.us-east-1.amazonaws.com/318353297187/tc_status_queue
+              value: ''
             - name: AWS_QUEUE_LISTENING_URL
-              value: https://sqs.us-east-1.amazonaws.com/318353297187/pagamento-status
+              value: ''
             - name: DATABASE
               value: tech_challenge_db
             - name: COLLECTION
